<resources>
    <string name="app_name">Netflix</string>
    <string name="title">House of Cards</string>
    <string name="description">S1:E2</string>
    <string name="icMessage">Descrição</string>
    <string name="icSound">Volume</string>
    <string name="icStar">Favorito</string>
    <string name="icContent">Contéudo</string>
    <string name="image">Imagem</string>
    <string name="icBack">Voltar</string>
    <string name="icPlay">Play</string>
    <string name="icPause">Pausar</string>
    <string name="start">1:30</string>
    <string name="end">42:30</string>
</resources>